# license_api

./: .env  Cargo.toml  README.md  todo.md
configuration/: configuration.yaml
scripts/: init_db.sh  master_db.sql  migrations.sh  sql.txt
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/db/: db.rs
src/entities/users/: mod.rs  user_post_request.rs  user_request.rs  user_response.rs  users_request.rs  users_response.rs
src/routes/: health_check copy.rs  mod.rs  users.rs
src/services/users/: map.rs  mod.rs  queries.rs  user_service.rs
src/types/: mod.rs  uuid_ext.rs
tests/: health_check.rs
tests/api/: helpers.rs  main.rs  users.rs
