[package]
name = "license_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.9"
serde = { version = "1", features = ["derive"]}
config = "0.14.1"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "license_api"