[package]
name = "license_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.9"
serde = { version = "1", features = ["derive"]}
config = "0.14.1"
serde_json = "1"

[dependencies.chrono]
version = "0.4.38"
features = [
    "serde"
]

[dependencies.uuid]
version = "1.11.0"
features = [
    "v7",                # Lets you generate random UUIDs for databases
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "license_api"